--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@
     font-weight: normal;
     font-style: normal;
 }
-	.container{
-		background: url(img/background.png);
-		width: 1215px;
-		height:  1028px;
-		background-size: cover;
-		margin: 0 auto;
-	}
+body{
+	background: url(img/background.png);
+	width: 1215px;
+	height: 1028px;
+	background-repeat: no-repeat;
+	background-position: center;
+	margin: 0 auto;
+}
 	.menu{
         width: 100%;
         height: 36px;
@@ -89,7 +90,7 @@
 	   	padding-bottom: 15px;
 	   	margin-left: 0px;
 	}
-	.button{
+	.log{
 		width: 276px;
 		height: 35px;
 		margin-top: 36px;
@@ -99,29 +100,29 @@
     	border-radius: 5px;
     	border-top: 1.5px solid #7a88b5;
     }
-    	.button li{
+    	.log li{
     		list-style-type: none;
     		margin-top: -25px;
     		text-align: center;		
     	}
-    	.button a{
+    	.log a{
     		text-decoration: none;
     		font-size: 14px;
 			font-family: "Helvetica Neue";
 			color: #fff;
 			display: inline;		
 		}
-		.button h1{
+		.log h1{
 			width: 22px;
 			border-right: 1px solid #213c71;
 			margin-left: 10px;
 			padding-right: 8px;
 			margin-top: 25px;
 		}
-	.button h4{
-		margin-left: 210px;
-		margin-top: 8px;
-	}
+		.log h4{
+			margin-left: 210px;
+			margin-top: 8px;
+		}
 h3{
     position: relative;
     overflow: hidden;
@@ -133,7 +134,7 @@ h3{
 }
 span{
     display: inline-block;
-    margin: 33px;
+    margin: 28px;
 }
   	span:before,
   	span:after{
@@ -153,35 +154,33 @@ span{
     	width: 125px;
     	box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.75);
     }
-    .forma{
-    	margin-top: -22px;
+form{
+    margin-top: -15px;
+    align-content: center;
+}
+    input{
+        width: 245px;
+        height: 35px;
+        background: #000;
+        text-align: left;
+        font-size: 14px;
+        font-family: "Helvetica Neue";
+        margin-left: 142px;
+        margin-top: 16px;
+        list-style: none;
+        display: inline-block;
+        box-shadow: 0px 1px 0px 0px rgba(72,73,72,1);
+        color: #fff;
+        text-decoration: none;
+        padding: 1px 15px;
+        border-top: none;
+        border-right: none;
+        border-left: none;
+        border-bottom: none;
     }
-    	.forma li{
-            width: 275px;
+   		input:hover{
+			width: 245px;
             height: 35px;
-            background: #000;
-            text-align: left;
-            font-size: 14px;
-			font-family: "Helvetica Neue";
-			margin-left: 142px;
-			margin-top: 16px;
-			list-style: none;
-            border-bottom: none;
-            display: inline-block;
-			box-shadow: 0px 1.5px 0px 0px rgba(72,73,72,1);
-       	}
-        .forma a{
-            color: #fff;
-            text-decoration: none;
-            display: inline-block;
-            padding: 9px 15px;
-            font-family: "Helvetica Neue";
-	    	border-right: 1px solid transparent;
-	    	border-left: 1px solid transparent;
-        }
-		.forma a:hover{
-			width: 242px;
-            height: 18px;
 			color: #fff;
 			background-color: #1b5288;
 			box-shadow: 0px 1px 15px 3px rgba(58,215,240,1);
@@ -194,7 +193,7 @@ p{
 	margin-top: 20px;
 	margin-left: -43px;
 }
-	.button2{
+	button{
 		width: 150px;
 		height: 35px;
 		margin-top: 20px;
@@ -206,22 +205,32 @@ p{
     	border-left: 1px solid #67c6e6;
     	border-bottom: 1px solid #67c6e6;
     	border-right: 1px solid #67c6e6;
+    	text-decoration: none;
+    	font-size: 14px;
+		font-family: "Helvetica Neue";
+		color: #fff;
     }
-    	.button2 li{
-    		list-style-type: none;    		
-    	}
-    	.button2 a{
-    		text-decoration: none;
-    		font-size: 14px;
-			font-family: "Helvetica Neue"a;
-			color: #fff;
-			display: inline;
-		}
-		.button2 p{
-			margin-left: 0px;
-			margin-top: 7px;
-		}
-	.end{
+    label{
+   		color: #fff;
+    	font-size: 14px;
+		font-family: "Helvetica Neue";
+		padding-left: 10px;
+   	}
+    .checkbox{
+    	width: 15px;
+    	height: 15px;
+    	box-shadow: none;
+    	margin-top: 20px;
+    	vertical-align: bottom;
+    }
+
+    .checkbox:hover{
+    	width: 15px;
+    	height: 15px;
+    	box-shadow: none;
+    }
+    
+   	.end{
 		width: 55%;
 		font-size: 11px;
 		margin-top: 18px;
